--- a/public/History_Of_Origami.html
+++ b/public/History_Of_Origami.html
@@ -8,7 +8,7 @@
         <meta name="author" content="Brandon Timothy P. Fernando & Rei Annica P. Francisco">
         <meta name="keywords" content="HTML, CSS, JavaScript, Web Development Oricentric, Origami, Paper Crafts" >
         <link rel="stylesheet" href="../styles.css">
-
+        <script src="script.js"></script>
         <style>
             #intro_objectives {
                 margin-bottom: 2rem;
@@ -153,14 +153,29 @@
 
     <body>
 
-        <nav class = "sidebar">
+         <nav class = "sidebar">
             <ul>
-                <li><a href="#home">HOME</a></li>
-                <li><a href="#about">HISTORY OF ORIGAMI</a></li>
-                <li><a href="#contact">ORIGAMI EXHIBIT</a></li>
-                <li><a href="#about">FOLDING IN ORIGAMI</a></li>
-                <li><a href="#about">References & Resources</a></li>
+                <li><a href="../index.html">HOME</a></li>
+                <li><a href="History_Of_Origami.html">HISTORY OF ORIGAMI</a></li>
+                <li><a href="Origami_Exhibit.html">ORIGAMI EXHIBIT</a></li>
+                <li><a href="Folding_In_Origami.html">FOLDING IN ORIGAMI</a></li>
+                <li><a href="References&Resources.html">RESOURCES</a></li>
             </ul>
+            <aside class="hotkeys">
+                <h4> Hotkeys </h4>
+                <ul>
+                    <li> <p> <kbd>Shift</kbd> + <kbd>B</kbd> - HOME </p> </li>
+                    <li> <p> <kbd>Shift</kbd> + <kbd>H</kbd> - HISTORY </p> </li>   
+                    <li> <p> <kbd>Shift</kbd> + <kbd>E</kbd> - EXHIBIT</p> </li>
+                    <li> <p> <kbd>Shift</kbd> + <kbd>M</kbd> - MECHANISMS </p> </li>    
+                    <li> <p> <kbd>Shift</kbd> + <kbd>R</kbd> - RESOURCES </p></li>    
+                    <li> <p> <kbd>Shift
+                        
+                    </kbd> + <kbd>T</kbd> - THEME </p> </li>    
+                    <li> <p> <kbd>Shift</kbd> + <kbd>P</kbd> - PLAY </p> </li>    
+                    <li> <p> <kbd>Shift</kbd> + <kbd>U</kbd> - MUTE </p> </li>    
+                </ul>
+            </aside>
         </nav>
 
         <header>
