--- a/index.html
+++ b/index.html
@@ -16,10 +16,15 @@
             #aboutWebsite { /* Info Boxes Container */
                 margin-bottom: 2rem;
                 display: flex;
-                flex-wrap:wrap;
+                flex-wrap: wrap;
                 gap: 2rem;
                 justify-content: space-between;
                 padding: 2rem 1rem;
+            }
+            #aboutWebsite h2 {
+                width: 100%;
+                text-align: center;
+                margin-bottom: 1rem;
             }
             .infoBox {
                 background-color: white;
@@ -33,6 +38,7 @@
                 transition: all 0.3s ease;
                 width: 30%;
                 justify-content: space-between;
+                cursor: pointer;
             }
             .infoBox:hover {
                 box-shadow: 0 4px 10px rgba(0,0,0,0.2);
@@ -53,9 +59,16 @@
                 max-height: 1000px;
             }
             .infoBox.active .infoContent {
+                opacity: 0;
+                max-height: 0;
+                margin-top: 0;
+                padding-bottom: 0.8rem;
+                transition: all 0.3s ease;
+                overflow: hidden;
+            }
+            .infoBox.active .infoContent {
                 opacity: 1;
-                max-height: 500px;
-                margin-top: 1rem;
+                max-height: 6.7rem;
             }
             .infoBoxImg {
                 width: 100%;
@@ -67,6 +80,15 @@
             }
             .infoBoxImg:hover {
                 transform: scale(1.05);
+            }
+            .collapsibles-contents { /* Collapsible Content Sections */
+                margin-top: 1rem;
+                padding: 1rem;
+                background-color: var(--background-color);
+                border: 1px solid #ccc;
+                border-radius: 5px;
+                overflow: hidden;
+                transition: max-height 0.3s ease;
             }
 
             /* Internal CSS: Features Section */
@@ -157,6 +179,7 @@
         </section>
 
         <section id="aboutWebsite">
+            <h2> About our website! (Click them!) </h2>
             <div class = infoBox id="offers">
                 <h2> What We Offer </h2>
                     <div class="infoContent"> 
@@ -164,10 +187,12 @@
                             Oricentric is a website developed in HTML, CSS, and JavaScript, aiming to highlight the 
                             beauty of Origami, both as a calming art and a catalyst for innovation in science. 
                         </p> 
+                        <br> <hr> <br>
                         <p> 
                             We showcase informative content on Origami’s history, role in modern science (with NASA’s starshade), and different folds
                             such as valley, mountain and squash fold–all used to create different Origami works. 
                         </p>
+                        <br> <hr> <br>
                         <p>
                             We additionally offer a clean and user-friendly interface, and engaging visuals for a more enjoyable browsing experience.
                             Visitors may navigate pop out navigation bars, keybinds for playable music and quick access to different sections of our website,
