--- a/public/Origami_Exhibit.html
+++ b/public/Origami_Exhibit.html
@@ -307,7 +307,36 @@
             
         </section>
         <footer>
-            <p>&copy; 2025 Oricentric — Fernando & Francisco</p>
-        </footer>   
+        <div class ="footerhead">
+            <h2> ORICENTRIC </h2>
+            <hr>
+        </div>
+            <!-- Left -->
+            <div id="footerbox"> 
+                <div id="footercontacts">
+                        <p> <i>Address:</i> Philippine Science High School - Main Campus, Agham Road, Diliman, Quezon City, Philippines </p>
+                    <ul> <p> <i>Email Addresses:</i> </p> 
+                        <li> <i> Fernando </i>b2029btpfernando@pshs.edu.ph </li>
+                        <li> <i> Francisco:</i> b2029rapfrancisco@pshs.edu.ph </li>
+                    </ul>
+                </div
+
+                <!-- Right -->
+
+                <div id="footersocialmedia">
+                    <ul> 
+                        <p> <i>Social Media:</i> </p>
+                        <li> Facebook: Brandon Fernando  ||  Rei Annica Francisco </li>
+                    </ul>
+                </div>
+                
+                <div id="footerlogoimg">
+                    <img src="Oricentric_logo(transparent).png" alt="Oricentric Logo" width="267px">
+                </div>
+            </div>
+
+            <p> &copy; 2025 Oricentric — Fernando & Francisco</p>
+
+        </footer>    
     </body>
 </html>
