--- a/public/Origami_Exhibit.html
+++ b/public/Origami_Exhibit.html
@@ -174,43 +174,31 @@
                 <!-- start of gallery w/ pics,steps, & descs-->
     <section id="exhibit">
         <section id="slideshow" class="sub-section">
-            <h2>Slideshow of Origami</h2>
+            <h2>Jumping origami</h2>
             <div class="slideshow-container">
 
             <div class="mySlides fade">
-            <div class="numbertext">1 / 6</div>
-            <img src="img_1" style="width:100%">
-            <div class="text">name of origami</div>
+            <div class="numbertext">1 / 4</div>
+            <img src="../assets/frog.webp" style="width:100%">
+            <div class="text">Jumping Frog</div>
             </div>
 
             <div class="mySlides fade">
-            <div class="numbertext">2 / 6</div>
-            <img src="img_2" style="width:100%">
-            <div class="text">name of origami</div>
+            <div class="numbertext">2 / 4</div>
+            <img src="../assets/kangaroo.webp" style="width:100%">
+            <div class="text">Jumping Kangaroo</div>
             </div>
 
             <div class="mySlides fade">
-            <div class="numbertext">3 / 6</div>
-            <img src="img_3" style="width:100%">
-            <div class="text">name of origami</div>
+            <div class="numbertext">3 / 4</div>
+            <img src="../assets/mouse.webp" style="width:100%">
+            <div class="text">Jumping Mouse</div>
             </div>
             
             <div class="mySlides fade">
-            <div class="numbertext">4 / 6</div>
-            <img src="img_4" style="width:100%">
-            <div class="text">name of origami</div>
-            </div>
-
-            <div class="mySlides fade">
-            <div class="numbertext">5 / 6</div>
-            <img src="img_5" style="width:100%">
-            <div class="text">name of origami</div>
-            </div>
-
-            <div class="mySlides fade">
-            <div class="numbertext">6 / 7</div>
-            <img src="img_6" style="width:100%">
-            <div class="text">name of origami</div>
+            <div class="numbertext">4 / 4</div>
+            <img src="../assets/spider.webp" style="width:100%">
+            <div class="text">Jumping Spider</div>
             </div>
 
             </div>
