--- a/public/Origami_Exhibit.html
+++ b/public/Origami_Exhibit.html
@@ -141,8 +141,12 @@
                 display: none;
             }
 
-            .mySlides:first-child {
-                display: block;
+            #slideshow {
+                width: 100%;
+                max-width: 1000px;
+                margin: 3rem auto;
+                position: relative;
+                clear: both;
             }
         </style>
     </head>
