--- a/public/Origami_Exhibit.html
+++ b/public/Origami_Exhibit.html
@@ -143,10 +143,15 @@
 
             #slideshow {
                 width: 100%;
-                max-width: 1000px;
+                max-width: 800px;
                 margin: 3rem auto;
+                margin-left: 250px;
                 position: relative;
-                clear: both;
+            }
+
+            .slideshow-container img {
+                max-height: 400px;
+                object-fit: contain;
             }
         </style>
     </head>
