fix application sticks

--- a/public/Origami_Exhibit.html
+++ b/public/Origami_Exhibit.html
@@ -83,11 +83,11 @@
             }
 
             #applications {
-                margin-bottom: 20rem;
                 display: flex;
-                flex-wrap:wrap;
+                flex-wrap: wrap;
+                justify-content: center;
+                align-items: flex-start; 
                 gap: 2rem;
-                justify-content: space-between;
                 padding: 2rem 1rem;
             }
 
@@ -194,7 +194,7 @@
     </section>
         
         <section id="gallery" class="sub-section">
-            <h2>Gallery</h2>
+            <h2>Origami we were able to remake</h2>
             <!-- image steps, descriptions, etc. will go here -->
                 <section id="slideshow" class="sub-section">
                 <div class="slideshow-container">
@@ -261,7 +261,7 @@
 
         <section id="applications">
             <!-- Descriptions of Applications -->
-            <h1>With the practice of Origami</h1>
+            <h1>With the <i>practice</i> of Origami</h1>
             <div class="box">
                 <h3>Stress reliever</h3>
                 <p>Origami can help reduce stress by encouraging focus and calmness during the folding process'. As a person concentrates on each step, it can aid clear the mind and promote relaxation, making origami a peaceful and enjoyable activity.</p>
