--- a/public/Origami_Exhibit.html
+++ b/public/Origami_Exhibit.html
@@ -86,9 +86,7 @@
                 display: flex;
                 flex-wrap: wrap;
                 justify-content: center;
-                align-items: flex-start; 
                 gap: 2rem;
-                padding: 2rem 1rem;
             }
 
             .section img {
@@ -113,9 +111,7 @@
                 border-radius: 5px;
                 box-shadow: 0 2px 5px rgba(0,0,0,0.1);
                 text-align: center;
-                flex: 1 1 250px; 
-                max-width: 300px; 
-                transition: all 0.3s ease;
+                flex: 1 1 calc(50% - 2rem);
             }
 
             .sections{
