I want to sleep

--- a/public/Origami_Exhibit.html
+++ b/public/Origami_Exhibit.html
@@ -141,6 +141,14 @@
                 max-height: 400px;
                 object-fit: contain;
             }
+
+            #gallery h2 {
+                font-size: 2.5rem; 
+                font-weight: 700;   
+                margin-bottom: 1.5rem; 
+                color: #141414;
+                text-align: center; 
+            }
         </style>
     </head>
 
@@ -180,10 +188,8 @@
         <section id="intro"> 
             <h3>Oricentric: Showcasing Numerous Masterpieces</h3>
             <p>
-                Welcome to the Origami Exhibit of Oricentric! Here, we proudly present a curated collection of exquisite origami masterpieces crafted by the <i>talented</i> developers. Each piece in this exhibit showcases the intricate art of paper folding, demonstrating the creativity, precision, and skill that define origami. Explore a diverse range of designs, from traditional models to contemporary interpretations, and immerse yourself in the beauty and complexity of this timeless craft.
+                Welcome to the Origami Exhibit of Oricentric! In this gallery, we humbly showcase origami creations we carefully folded ourselves. While we didn’t design the original models, each piece reflects the steps we followed and represents some of our finest paper mockups yet. Explore a variety of designs, from traditional models to modern interpretations, and enjoy the beauty and craftsmanship of origami through our own hands-on creations.
             </p>
-
-           
         </section>
 
     </section>
