--- a/public/Origami_Exhibit.html
+++ b/public/Origami_Exhibit.html
@@ -86,7 +86,7 @@
             }
             
             #gallery {
-                margin-bottom: 20rem;
+                margin-bottom: 4rem;
                 padding: 2rem 1rem;
                 text-align: center;
                 gap: 2rem;
@@ -112,6 +112,10 @@
                 max-width: 500px;
                 display: block;
                 margin: 2rem auto;
+            }
+
+            .sub-section h2 {
+                text-align: center;
             }
 
             #origami1, #origami2, #origami3, #origami4, #origami5, #origami6 {
@@ -340,18 +344,18 @@
                     <ul> 
                         <p> <i>Social Media:</i> </p>
                         <li> Facebook: Brandon Fernando  ||  Rei Annica Francisco </li>
-                    </ul>
-                </div>
 
-                <div id="footerreferences">
-                    <p><i>References: Origami Exhibit</i></p>
-                    <ul>
-                        <li>
-                            W3Schools.com. (n.d.).
-                            <a href="https://www.w3schools.com/howto/howto_js_slideshow.asp" target="_blank">
-                                https://www.w3schools.com/howto/howto_js_slideshow.asp
-                            </a>
-                        </li>
+                        <hr>
+
+                        <p><i>References (Origami Exhibit):</i></p>
+                        <ul>
+                            <li>
+                                W3Schools.com. (n.d.).
+                                <a href="https://www.w3schools.com/howto/howto_js_slideshow.asp" target="_blank">
+                                    https://www.w3schools.com/howto/howto_js_slideshow.asp
+                                </a>
+                            </li>
+                        </ul>
                     </ul>
                 </div>
                 
