fix transparent logo

--- a/public/Origami_Exhibit.html
+++ b/public/Origami_Exhibit.html
@@ -360,7 +360,7 @@
                 </div>
                 
                 <div id="footerlogoimg">
-                    <img src="Oricentric_logo(transparent).png" alt="Oricentric Logo" width="267px">
+                    <img src="../assets/Oricentric_logo(transparent).png" alt="Oricentric Logo" width="267px">
                 </div>
             </div>
 
