--- a/public/References&Resources.html
+++ b/public/References&Resources.html
@@ -11,9 +11,45 @@
         <script src="script.js"></script>
         <style>
 
-
             name-and-authorship, .credentials, .social-media-links {
                 flex: 1;
+            }
+
+            #references {
+                background-color: #f8f8f8;  
+                padding: 2rem;
+                margin: 2rem 1rem;          
+                border-radius: 5px;
+            }
+
+            #references h2 {
+                text-align: center;
+                font-size: 2rem;
+                margin-bottom: 1rem;
+                color: #141414;
+            }
+
+            #references h3 {
+                font-size: 1.2rem;
+                margin-top: 1.5rem;
+            }
+
+            #references ul {
+                list-style-type: disc;
+                margin-left: 2rem;
+            }
+
+            #references li {
+                margin-bottom: 0.5rem;
+            }
+
+            #references a {
+                color: #0066cc;           
+                text-decoration: none;
+            }
+
+            #references a:hover {
+                text-decoration: underline; 
             }
             
         </style>
@@ -57,7 +93,17 @@
         </section>
 
         <section id="references">
+            <h2>References</h2>
             <!-- References with APA Format -->
+            <h3>Origami Exhibit</h3>
+            <ul>
+                <li>
+                    W3Schools.com. (n.d.). <i>How To - Slideshow</i>. 
+                    <a href="https://www.w3schools.com/howto/howto_js_slideshow.asp" target="_blank">
+                        https://www.w3schools.com/howto/howto_js_slideshow.asp
+                    </a>
+                </li>
+            </ul>
         </section>
         <footer>
         <div class ="footerhead">
@@ -72,7 +118,7 @@
                         <li> <i> Fernando </i>b2029btpfernando@pshs.edu.ph </li>
                         <li> <i> Francisco:</i> b2029rapfrancisco@pshs.edu.ph </li>
                     </ul>
-                </div
+                </div>
 
                 <!-- Right -->
 
@@ -84,7 +130,7 @@
                 </div>
                 
                 <div id="footerlogoimg">
-                    <img src="Oricentric_logo(transparent).png" alt="Oricentric Logo" width="267px">
+                    <img src="../assets/Oricentric_logo(transparent).png" alt="Oricentric Logo" width="267px">
                 </div>
             </div>
 
