--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
 
         <section id="finalMessage">
             <p> 
-                Together, we will guide you on a exhilerating journey into the world of paper folding! 
+                Together, we will guide you on an exhilerating journey into the world of paper folding! 
             </p>
             <p>
                 "In the midst of chaos, there is also opportunity." In the midst of patience, there is also creativity.  - Adapted from Sun Tzu
@@ -285,7 +285,7 @@
                         <li> <i> Fernando </i>b2029btpfernando@pshs.edu.ph </li>
                         <li> <i> Francisco:</i> b2029rapfrancisco@pshs.edu.ph </li>
                     </ul>
-                </div
+                </div>
 
                 <!-- Right -->
 
