--- a/public/Origami_Exhibit.html
+++ b/public/Origami_Exhibit.html
@@ -86,7 +86,7 @@
             }
             
             #gallery {
-                margin-bottom: 4rem;
+                margin-bottom: 3rem;
                 padding: 2rem 1rem;
                 text-align: center;
                 gap: 2rem;
@@ -347,7 +347,7 @@
 
                         <hr>
 
-                        <p><i>References (Origami Exhibit):</i></p>
+                        <p><i>References: Origami Exhibit</i></p>
                         <ul>
                             <li>
                                 W3Schools.com. (n.d.).
